tests/baselines/reference/binaryArithmatic3.errors.txt
tests/cases/compiler/binaryArithmatic3.ts(1,9): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/binaryArithmatic3.ts(1,21): error TS2532: Object is possibly 'undefined'.


==== tests/cases/compiler/binaryArithmatic3.ts (2 errors) ====
    var v = undefined | undefined;
            ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                        ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.